--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "^35.0.0",
+    "expo": "35.0.1",
+    "expo-constants": "^7.0.1",
     "moment": "^2.24.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-action-button": "2.8.4",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-modal-datetime-picker": "4.13.0",
     "react-native-web": "^0.11.7",
     "react-navigation": "1.4.0"
   },
